# pg-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md
fixtures/: Makefile  README.md  acceptance.sh  analytics_dw.sql  mini_blog.sql  shop_oms.sql
specs/: 0001-pg-mcp-prd-review.md  0001-pg-mcp-prd.md  0002-pg-mcp-design-review.md  0002-pg-mcp-design.md  0004-pg-mcp-impl-plan.md  0005-pg-mcp-impl-plan-review.md  0006-pg-mcp-impl-review.md  0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md  test.md
src/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/pg_mcp/: __init__.py  __main__.py  app.py  cli.py  config.py  protocols.py  server.py
src/pg_mcp/db/: __init__.py  pool.py
src/pg_mcp/engine/: __init__.py  db_inference.py  orchestrator.py  result_validator.py  sql_executor.py  sql_generator.py  sql_rewriter.py  sql_validator.py
src/pg_mcp/models/: __init__.py  errors.py  request.py  response.py  schema.py
src/pg_mcp/observability/: __init__.py  logging.py  metrics.py  sanitizer.py
src/pg_mcp/schema/: __init__.py  cache.py  discovery.py  retriever.py  state.py
src/tests/: conftest.py
src/tests/e2e/: test_mcp_tool.py
src/tests/fixtures/: sql_samples.py
src/tests/integration/: test_app.py  test_pool.py  test_schema_cache.py  test_schema_discovery.py  test_sql_executor.py
src/tests/unit/: test_config.py  test_db_inference.py  test_orchestrator.py  test_rate_limit.py  test_result_validator.py  test_sanitizer.py  test_schema_retriever.py  test_sql_generator.py  test_sql_rewriter.py  test_sql_validator.py
(+6 files in other folders)
