[project]
name = "pg-mcp"
version = "0.1.0"
description = "PostgreSQL Natural Language Query MCP Server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "asyncpg>=0.29,<1.0",
    "openai>=1.50,<2.0",
    "redis[hiredis]>=5.0,<6.0",
    "sqlglot>=26.0,<31.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<30.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[project.scripts]
pg-mcp = "pg_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: marks tests that require PostgreSQL and/or Redis",
    "e2e: marks end-to-end tests",
]
